refactor btn design

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -4,20 +4,20 @@
 
         <h2>ボタン (Wrap Style)</h2>
         <p class="btn"><a href="">Button</a></p>
-        <p class="btn primary"><a href="">Button</a></p>
-        <p class="btn secondly"><a href="">Button</a></p>
-        <p class="btn green"><a href="">Button</a></p>
-        <p class="btn orange"><a href="">Button</a></p>
-        <p class="btn red"><a href="">Button</a></p>
+        <p class="btn primary"><a href="">Primary</a></p>
+        <p class="btn secondly"><a href="">Secondly</a></p>
+        <p class="btn green"><a href="">Success</a></p>
+        <p class="btn orange"><a href="">Warning</a></p>
+        <p class="btn red"><a href="">Danger</a></p>
 
 
         <h3>button Element</h3>
         <p class="btn"><button>Button</button></p>
         <p class="btn primary"><button>Button</button></p>
         <p class="btn secondly"><button>Button</button></p>
-        <p class="btn green"><button>Button</button></p>
-        <p class="btn orange"><button>Button</button></p>
-        <p class="btn red"><button>Button</button></p>
+        <p class="btn green"><button>Success</button></p>
+        <p class="btn orange"><button>Warning</button></p>
+        <p class="btn red"><button>Danger</button></p>
 
         <h3>input Element</h3>
         <p class="btn"><input type="submit" value="Button"/></p>
