refactor btn style

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -27,6 +27,13 @@
         <p class="btn orange"><input type="submit" value="Button"/></p>
         <p class="btn red"><input type="submit" value="Button"/></p>
 
+        <h2>ボタン (サイズ)</h2>
+        <p class="btn primary ss"><a href="">Mini button</a></p>
+        <p class="btn primary small"><a href="">Small button</a></p>
+        <p class="btn primary"><a href="">Default button</a></p>
+        <p class="btn primary large"><a href="">Large button</a></p>
+        <p class="btn primary ll"><a href="">Big button</a></p>
+
         <h2>ボタン (Style)</h2>
         <a class="btn" href="">Button</a>
         <button class="btn primary" value="ボタン"></button>
