create modal & backdrop

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -415,6 +415,11 @@
 
 
         <h2>フッター</h2>
+
+        <div class="modalWindow"></div>
+
+        <div class="modalWindow" id="hoge"></div>
+
         <footer class="footer">
 
         </footer>
@@ -431,10 +436,6 @@
         {{ partial "sidebar.html" . }}
     </div><!-- #main-content -->
 </section>
-
-<script>
-    //var ap = new AP();
-</script>
 
 
 {{ partial "footer.html" . }}
