--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -3170,6 +3170,19 @@ h6.title {
 
 /* Modal Style
 -------------------------------------------------- */
+.modalWindowBackDrop {
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.modalWindowBackDrop.show {
+  display: block;
+}
+
 /* Separate Style
 -------------------------------------------------- */
 /*
