create modal & backdrop

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -407,6 +407,9 @@
         <p class="icon ap-close"></p>
         <p class="icon ap-times"></p>
 
+        <h2>モーダルウィンドウ</h2>
+        <p class="btn primary"><a href="#modalWindow" data-ap-modal>モーダルウィンドウ</a></p>
+
 
         <h2>ヘッダー</h2>
         <header class="header">
@@ -414,11 +417,12 @@
         </header>
 
 
+
         <h2>フッター</h2>
 
         <div class="modalWindow"></div>
 
-        <div class="modalWindow" id="hoge"></div>
+        <div class="modalWindow" id="modalWindow"></div>
 
         <footer class="footer">
 
