refactor modal script

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -422,7 +422,9 @@
 
         <div class="modalWindow"></div>
 
-        <div class="modalWindow" id="modalWindow"></div>
+        <div class="modalWindow" id="modalWindow">
+            <p class="btn primary"><a href="#" data-ap-modal-close>クローズ</a></p>
+        </div>
 
         <footer class="footer">
 
