--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -389,23 +389,7 @@
 
 
         <h2>アイコン</h2>
-        <p class="icon ap-glass"></p>
-        <p class="icon ap-music"></p>
-        <p class="icon ap-search"></p>
-        <p class="icon ap-envelope-o"></p>
-        <p class="icon ap-heart"></p>
-        <p class="icon ap-star"></p>
-        <p class="icon ap-star-o"></p>
-        <p class="icon ap-user"></p>
-
-        <p class="icon ap-film"></p>
-        <p class="icon ap-th-large"></p>
-        <p class="icon ap-th"></p>
-        <p class="icon ap-th-list"></p>
-        <p class="icon ap-check"></p>
-        <p class="icon ap-remove"></p>
-        <p class="icon ap-close"></p>
-        <p class="icon ap-times"></p>
+        {{ partial "parts/icon.html" . }}
 
         <h2>モーダルウィンドウ</h2>
         <p class="btn primary"><a href="#modalWindow" data-ap-modal>モーダルウィンドウ</a></p>
