add input radio & checkbox

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -180,15 +180,17 @@
         </div>
 
         <h2>フォーム</h2>
-        <p class="input"><input type="text" value="テキスト"/></p>
-        <p class="input"><input type="checkbox"/></p>
-        <p class="input"><input type="search"/></p>
-        <p class="input"><input type="radio"/></p>
+        <p class="input"><input type="text" value="テキスト"></p>
+        <p class="input"><input type="checkbox"></p>
+        <p class="input"><input type="search"></p>
+        <p class="input"><input type="radio"></p>
+        <p class="input"><input type="radio" checked></p>
+        <p class="input"><input type="radio" disabled checked></p>
 
-        <input type="text" value="テキスト"/><
-        <input type="checkbox"/><
-        <input type="search"/><
-        <input type="radio"/><
+        <input type="text" value="テキスト"/>
+        <input type="checkbox"/>
+        <input type="search"/>
+        <input type="radio"/>
 
         <p class="input">
             <select name="" id="">
