--- a/scss/atomic-package/base/_setting.scss
+++ b/scss/atomic-package/base/_setting.scss
@@ -14,9 +14,9 @@ $mediaQueriesPoint1: 414px;
 
 @font-face {
   font-family: 'FontAwesome';
-  src: url("#{$fontPath}/fontawesome-webfont.woff2") format('woff2'),
-  url("#{$fontPath}/fontawesome-webfont.woff") format("woff"),
-  url("#{$fontPath}/fontawesome-webfont.ttf") format("truetype");
+  src: url("#{$fontPath}fontawesome-webfont.woff2") format('woff2'),
+  url("#{$fontPath}fontawesome-webfont.woff") format("woff"),
+  url("#{$fontPath}fontawesome-webfont.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
