--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -108,7 +108,7 @@ body {
   margin: 0;
   padding: 0;
   font-size: 14px;
-  font-family: arial, "Hiragino Kaku Gothic Pro", sans-serif;
+  font-family: Helvetica, Arial, sans-serif, "Hiragino Kaku Gothic Pro";
 }
 
 body {
