--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -121,7 +121,7 @@ section {
 }
 
 a {
-  color: #0060C1;
+  color: #1397E1;
 }
 
 /***
@@ -359,6 +359,7 @@ h6.title {
 .btn:not(a) > input {
   display: inline-block;
   width: 100%;
+  min-height: 30px;
   padding: 0 12px;
   background: #F6F6F6;
   border-radius: 4px;
@@ -370,7 +371,7 @@ h6.title {
   color: #666;
   cursor: pointer;
   font-size: 14px;
-  line-height: 30px;
+  line-height: 28px;
 }
 
 .btn.ss,
@@ -541,6 +542,112 @@ h6.title {
 .btn .icon.social,
 .btn:not(a) .icon.social {
   margin: 0px 6px -11px -34px;
+}
+
+a.btn,
+button.btn,
+input.btn {
+  display: inline-block;
+  min-width: 120px;
+  min-height: 30px;
+  padding: 0 12px;
+  background: #F6F6F6;
+  border-radius: 4px;
+  border: none;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  text-align: center;
+  text-decoration: none;
+  color: #666;
+  cursor: pointer;
+  font-size: 14px;
+  line-height: 30px;
+  vertical-align: top;
+  /* Skin */
+}
+
+a.btn.primary,
+button.btn.primary,
+input.btn.primary {
+  background: #0BACD3;
+  border-right: 6px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 1px inset;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 1px inset;
+  color: #fff;
+}
+
+a.btn.secondly,
+button.btn.secondly,
+input.btn.secondly {
+  background: #EEEEEE;
+  border: #000 1px solid;
+  background: -webkit-gradient(linear, left top, left bottom, from(#404040), to(#282828));
+  background: -webkit-linear-gradient(top, #404040, #282828);
+  background: linear-gradient(top, #404040, #282828);
+  color: #fff;
+}
+
+a.btn.secondly > a,
+a.btn.secondly > input,
+button.btn.secondly > a,
+button.btn.secondly > input,
+input.btn.secondly > a,
+input.btn.secondly > input {
+  color: #000000;
+}
+
+a.btn.green,
+button.btn.green,
+input.btn.green {
+  background: #81BA41;
+  border: #669433 1px solid;
+  color: #fff;
+}
+
+a.btn.orange,
+button.btn.orange,
+input.btn.orange {
+  background: #F0AD4E;
+  border: #E38D13 1px solid;
+  color: #fff;
+}
+
+a.btn.red,
+button.btn.red,
+input.btn.red {
+  background: #D52D47;
+  border: #B02B3E 1px solid;
+  color: #fff;
+}
+
+.btnGroup > * {
+  display: inline-block;
+  white-space: nowrap;
+}
+
+.btnGroup .btn {
+  border-radius: 0;
+}
+
+.btnGroup .btn > a {
+  border-radius: 0;
+}
+
+.btnGroup .btn:first-child,
+.btnGroup .btn:first-child a {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.btnGroup .btn:last-child,
+.btnGroup .btn:last-child a {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.btnGroup .btn + .btn,
+.btnGroup .btn + .btn a {
+  border-left: none;
 }
 
 /* Box Style
