--- a/scss/atomic-package/parts/_button.scss
+++ b/scss/atomic-package/parts/_button.scss
@@ -8,7 +8,6 @@
   position: relative;
   display: inline-block;
   min-width: 120px;
-  //width: 180px;
 
   /* Atomic */
   > a,
@@ -16,6 +15,7 @@
   > input {
     display: inline-block;
     width: 100%;
+    min-height: 30px;
     padding: 0 12px;
     background: #F6F6F6;
     border-radius: 4px;
@@ -26,7 +26,7 @@
     color: #666;
     cursor: pointer;
     font-size: 14px;
-    line-height: 30px;
+    line-height: 28px;
   }
 
   &.ss {
@@ -75,8 +75,6 @@
       font-size: 15px;
     }
   }
-
-
 
   /* Skin */
   &.primary > a,
@@ -140,6 +138,97 @@
     /* Module */
     &.social {
       margin: 0px 6px -11px -34px;
+    }
+  }
+}
+
+a,
+button,
+input {
+  &.btn {
+    display: inline-block;
+    min-width: 120px;
+    min-height: 30px;
+    padding: 0 12px;
+    background: #F6F6F6;
+    border-radius: 4px;
+    border: none;
+    box-sizing: border-box;
+    text-align: center;
+    text-decoration: none;
+    color: #666;
+    cursor: pointer;
+    font-size: 14px;
+    line-height: 30px;
+    vertical-align: top;
+
+    /* Skin */
+    &.primary {
+      background: #0BACD3;
+      border-right: 6px;
+      box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 1px inset;
+      color: #fff;
+      //&:hover { background: #303030; }
+    }
+
+    &.secondly {
+      background: #EEEEEE;
+      border: #000 1px solid;
+      //box-shadow: inset #E5E5E5 0 0 1px 1px;
+      background: linear-gradient(top, #404040, #282828);
+      color: #fff;
+      > a,
+      > input { color: #000000; }
+      //&:hover { background: #EAEAEA; }
+    }
+
+    &.green {
+      background: #81BA41;
+      border: #669433 1px solid;
+      color: #fff;
+      //&:hover { background: #267400; }
+    }
+
+    &.orange {
+      background: #F0AD4E;
+      border: #E38D13 1px solid;
+      color: #fff;
+      //&:hover { background: #FCAE05; }
+    }
+
+    &.red {
+      background: #D52D47;
+      border: #B02B3E 1px solid;
+      color: #fff;
+      //&:hover { background: #FCAE05; }
+    }
+  }
+}
+
+.btnGroup {
+  & > * {
+    display: inline-block;
+    white-space: nowrap;
+  }
+  .btn {
+    border-radius: 0;
+    & > a {
+      border-radius: 0;
+    }
+
+    &:first-child,
+    &:first-child a {
+      border-top-left-radius: 4px;
+      border-bottom-left-radius: 4px;
+    }
+    &:last-child,
+    &:last-child a {
+      border-top-right-radius: 4px;
+      border-bottom-right-radius: 4px;
+    }
+    & + .btn,
+    & + .btn a {
+      border-left: none;
     }
   }
 }
