refactor ts files

--- a/docs/layouts/partials/parts/btn.html
+++ b/docs/layouts/partials/parts/btn.html
@@ -65,6 +65,7 @@
 <input class="btn red" type="submit" value="Button"/>
 
 
+<h2>ボタングループ</h2>
 <div class="btnGroup">
     <p class="btn primary"><a href="">Primary</a></p><!--
     --><p class="btn primary"><a href="">Primary</a></p><!--
@@ -73,6 +74,6 @@
 
 <div class="btnGroup">
     <a class="btn red" href="">Button</a><!--
-    --><button class="btn red" value="">Button</button><!--
+    --><button class="btn orange" value="">Button</button><!--
     --><input class="btn red" type="submit" value="Button"/>
 </div>
