--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -339,12 +339,16 @@ h6.title {
 /*
  * Button Style
 */
+/* Primary */
 /* Atomic */
 .btn,
 .btn:not(a) {
   position: relative;
   display: inline-block;
   min-width: 120px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  vertical-align: middle;
   /* Atomic */
   /* Skin */
   /* State */
@@ -372,6 +376,7 @@ h6.title {
   cursor: pointer;
   font-size: 14px;
   line-height: 28px;
+  vertical-align: top;
 }
 
 .btn.ss,
@@ -451,9 +456,8 @@ h6.title {
 .btn:not(a).primary > button,
 .btn:not(a).primary > input {
   background: #0BACD3;
-  border-right: 6px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 1px inset;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 1px inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   color: #fff;
 }
 
@@ -464,7 +468,6 @@ h6.title {
 .btn:not(a).secondly > button,
 .btn:not(a).secondly > input {
   background: #EEEEEE;
-  border: #000 1px solid;
   background: -webkit-gradient(linear, left top, left bottom, from(#404040), to(#282828));
   background: -webkit-linear-gradient(top, #404040, #282828);
   background: linear-gradient(top, #404040, #282828);
@@ -493,7 +496,8 @@ h6.title {
 .btn:not(a).green > button,
 .btn:not(a).green > input {
   background: #81BA41;
-  border: #669433 1px solid;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   color: #fff;
 }
 
@@ -504,7 +508,8 @@ h6.title {
 .btn:not(a).orange > button,
 .btn:not(a).orange > input {
   background: #F0AD4E;
-  border: #E38D13 1px solid;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   color: #fff;
 }
 
@@ -515,7 +520,8 @@ h6.title {
 .btn:not(a).red > button,
 .btn:not(a).red > input {
   background: #D52D47;
-  border: #B02B3E 1px solid;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   color: #fff;
 }
 
@@ -548,7 +554,7 @@ a.btn,
 button.btn,
 input.btn {
   display: inline-block;
-  min-width: 120px;
+  width: 100%;
   min-height: 30px;
   padding: 0 12px;
   background: #F6F6F6;
@@ -561,8 +567,9 @@ input.btn {
   color: #666;
   cursor: pointer;
   font-size: 14px;
-  line-height: 30px;
+  line-height: 28px;
   vertical-align: top;
+  width: auto;
   /* Skin */
 }
 
@@ -570,9 +577,8 @@ a.btn.primary,
 button.btn.primary,
 input.btn.primary {
   background: #0BACD3;
-  border-right: 6px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 1px inset;
-  box-shadow: rgba(0, 0, 0, 0.2) 0 -1px 0 1px inset;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   color: #fff;
 }
 
@@ -600,7 +606,8 @@ a.btn.green,
 button.btn.green,
 input.btn.green {
   background: #81BA41;
-  border: #669433 1px solid;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   color: #fff;
 }
 
@@ -608,7 +615,8 @@ a.btn.orange,
 button.btn.orange,
 input.btn.orange {
   background: #F0AD4E;
-  border: #E38D13 1px solid;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   color: #fff;
 }
 
@@ -616,7 +624,8 @@ a.btn.red,
 button.btn.red,
 input.btn.red {
   background: #D52D47;
-  border: #B02B3E 1px solid;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
+  box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   color: #fff;
 }
 
@@ -645,9 +654,24 @@ input.btn.red {
   border-bottom-right-radius: 4px;
 }
 
-.btnGroup .btn + .btn,
-.btnGroup .btn + .btn a {
-  border-left: none;
+.btnGroup .btn.btn + .primary {
+  border-left: #0889a8 1px solid;
+}
+
+.btnGroup .btn.btn + .secondly {
+  border-left: #0889a8 1px solid;
+}
+
+.btnGroup .btn.btn + .green {
+  border-left: #40986c 1px solid;
+}
+
+.btnGroup .btn.btn + .orange {
+  border-left: #c38a3a 1px solid;
+}
+
+.btnGroup .btn.btn + .red {
+  border-left: #af4450 1px solid;
 }
 
 /* Box Style
@@ -3375,6 +3399,15 @@ input[type="radio"]:checked::before {
 
 input[type="radio"]:disabled {
   opacity: 0.5;
+}
+
+input[type="text"],
+input[type="search"],
+input[type="password"] {
+  border: #3D3D3D 1px solid;
+  height: 28px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* input class style */
