create switcher view

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -359,6 +359,21 @@
 
         </table>
 
+        <ul class="switcher" data-ap-switcher>
+            <li><a href="">あああ</a></li>
+            <li></li>
+            <li><a href=""></a></li>
+            <li>
+                <div></div>
+                <a href=""></a>
+                <p></p>
+            </li>
+        </ul>
+
+        <ul class="switcher" data-ap-switcher>
+            <li></li>
+        </ul>
+
 
         <h2>アイコン</h2>
         {{ partial "parts/icon.html" . }}
