--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -360,11 +360,11 @@
         </table>
 
         <ul class="switcher" data-ap-switcher>
-            <li><a href="">あああ</a></li>
-            <li></li>
-            <li><a href=""></a></li>
+            <li><a href="">switcher001</a></li>
+            <li>switcher002</li>
+            <li><a href="">switcher003</a></li>
             <li>
-                <div></div>
+                <div>switcher004</div>
                 <a href=""></a>
                 <p></p>
             </li>
