refactor Switcher.ts

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -359,7 +359,7 @@
 
         </table>
 
-        <ul class="switcher" data-ap-switcher>
+        <ul class="switcher" data-ap-switcher="#switcherContents">
             <li><a href="">switcher001</a></li>
             <li>switcher002</li>
             <li><a href="">switcher003</a></li>
@@ -373,6 +373,22 @@
         <ul class="switcher" data-ap-switcher>
             <li></li>
         </ul>
+
+        <div class="switcherContents" id="switcherContents">
+            <div>ああああああ</div>
+            <div>いいいいいい</div>
+            <div>ううううう</div>
+            <div>えええええ</div>
+        </div>
+
+        <style>
+            .switcherContents > div {
+                display: none;
+            }
+            .switcherContents > .show {
+                display: block;
+            }
+        </style>
 
 
         <h2>アイコン</h2>
