--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -379,6 +379,17 @@
             </li>
         </ul>
 
+        <ul class="switcher" data-ap-switcher="#switcherContents">
+            <li><a href="">switcher001</a></li>
+            <li>switcher002</li>
+            <li><a href="">switcher003</a></li>
+            <li>
+                <div>switcher004</div>
+                <a href=""></a>
+                <p></p>
+            </li>
+        </ul>
+
         <ul class="switcher" data-ap-switcher>
             <li></li>
         </ul>
