--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -5,6 +5,9 @@
         <h2>ボタン (Wrap Style)</h2>
         {{ partial "parts/btn.html" . }}
 
+        <p class="btn primary" data-ap-scroll="#scroll">
+            <a href="">スクロールトリガー</a>
+        </p>
 
 
         <h2>タイトル</h2>
@@ -408,11 +411,6 @@
             <p>あああああああああ</p>
             <p>いいいいいいいいいい</p>
         </div>
-
-
-        <p data-ap-scroll="#scroll">スクロールトリガー</p>
-
-
 
         <style>
             .switcherContents > div {
