--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -9,6 +9,10 @@
             <a href="">スクロールトリガー</a>
         </p>
 
+        <p class="btn primary" data-ap-scroll="200">
+            <a href="">スクロールトリガー2</a>
+        </p>
+
 
         <h2>タイトル</h2>
 
