add Dropdown files & refactor SmoothScroll

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -9,7 +9,7 @@
             <a href="">スクロールトリガー</a>
         </p>
 
-        <p class="btn primary" data-ap-scroll="200">
+        <p class="btn primary" data-ap-scroll="400">
             <a href="">スクロールトリガー2</a>
         </p>
 
@@ -100,6 +100,14 @@
                 </li>
             </ul>
         </nav>
+
+        <h3>ドロップダウン</h3>
+        <div data-ap-dropdown>
+            <div>トリガーボタン</div>
+
+            <div class="dropdown">ドロップダウンコンテンツ</div>
+        </div>
+
 
         <h2>アイコン</h2>
         <p class="icon"></p>
