refactor modal script

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -463,7 +463,7 @@
 
         <h2>フッター</h2>
 
-        <div class="modalWindow"></div>
+        <!--<div class="modalWindow"></div>-->
 
         <div class="modalWindow" id="modalWindow">
             <p class="btn primary"><a href="#" data-ap-modal-close>クローズ</a></p>
