--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -3310,18 +3310,29 @@ input.btn.red {
 /* Modal Style
 -------------------------------------------------- */
 .modalWindow {
-  display: none;
   position: fixed;
-  top: 100px;
-  left: 100px;
   width: 800px;
   min-height: 400px;
   background: #fff;
   z-index: 5000;
+  -webkit-transition: all 0.15s ease-out;
+  transition: all 0.15s ease-out;
 }
 
 .modalWindow.open {
   display: block;
+}
+
+.modalWindow.openStyle {
+  -webkit-transform: scale(0.4);
+  transform: scale(0.4);
+  opacity: 0.2;
+}
+
+.modalWindow.anime {
+  -webkit-transform: scale(1);
+  transform: scale(1);
+  opacity: 1;
 }
 
 .modalWindowBackDrop {
