refactor modal script

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -466,7 +466,10 @@
         <!--<div class="modalWindow"></div>-->
 
         <div class="modalWindow" id="modalWindow">
-            <p class="btn primary"><a href="#" data-ap-modal-close>クローズ</a></p>
+            <div class="modalBody">
+                <p class="btn primary"><a href="#" data-ap-modal-close>クローズ</a></p>
+                <div>コンテンツ</div>
+            </div>
         </div>
 
         <div id="scroll"></div>
