--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -114,6 +114,7 @@ body {
 body {
   background: #fff;
   text-align: left;
+  color: #3D3D3D;
 }
 
 section {
@@ -3387,7 +3388,7 @@ input[type="radio"]:disabled {
 input[type="text"],
 input[type="search"],
 input[type="password"] {
-  border: #3D3D3D 1px solid;
+  border: #979797 1px solid;
   height: 28px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
