--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -374,6 +374,12 @@
 
         </table>
 
+        <h2>アラート</h2>
+        <p class="alert">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+        <p class="alert green">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+        <p class="alert yellow">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+        <p class="alert red">アラート文言アラート文言アラート文言アラート文言アラート文言アラート文言</p>
+
         <h2>toggle</h2>
         <a href="" data-ap-toggle="#toggleContents">トグル</a>
 
@@ -445,7 +451,6 @@
                 display: block;
             }
         </style>
-
 
         <h2>アイコン</h2>
         {{ partial "parts/icon.html" . }}
