--- a/scss/atomic-package/base/_setting.scss
+++ b/scss/atomic-package/base/_setting.scss
@@ -7,7 +7,7 @@ $colorAqua: #0ff;
 
 $linkMainColor: #1397E1;
 
-$fontFamily: Helvetica, Arial, sans-serif, "Hiragino Kaku Gothic Pro";
+$fontFamily: Helvetica, Arial, sans-serif, 'Hiragino Kaku Gothic Pro', 'メイリオ';
 
 $fontMainColor: #3D3D3D;
 
