refactor btn style

--- a/docs/layouts/index.html
+++ b/docs/layouts/index.html
@@ -5,11 +5,11 @@
         <h2>ボタン (Wrap Style)</h2>
         {{ partial "parts/btn.html" . }}
 
-        <p class="btn primary" data-ap-scroll="#scroll">
+        <p class="btn" data-ap-scroll="#scroll">
             <a href="">スクロールトリガー</a>
         </p>
 
-        <p class="btn primary" data-ap-scroll="400">
+        <p class="btn green" data-ap-scroll="400">
             <a href="">スクロールトリガー2</a>
         </p>
 
