--- a/docs/layouts/partials/parts/btn.html
+++ b/docs/layouts/partials/parts/btn.html
@@ -23,17 +23,26 @@
 <p class="btn red"><input type="submit" value="Danger"/></p>
 
 <h2>ボタン (サイズ)</h2>
-<p class="btn primary ss"><a href="">Mini button</a></p>
+<p class="btn primary mini"><a href="">Mini button</a></p>
 <p class="btn primary small"><a href="">Small button</a></p>
 <p class="btn primary"><a href="">Default button</a></p>
 <p class="btn primary large"><a href="">Large button</a></p>
-<p class="btn primary ll"><a href="">Big button</a></p>
+<p class="btn primary big"><a href="">Big button</a></p>
 
 <h2>ボタン (幅サイズ)</h2>
-
+<p class="btn primary narrow"><a href="">narrow</a></p>
+<p class="btn primary short"><a href="">short</a></p>
+<p class="btn primary"><a href="">Default button</a></p>
+<p class="btn primary long"><a href="">long</a></p>
+<p class="btn primary wide"><a href="">wide</a></p>
+<p class="btn primary free"><a href="">free</a></p>
 
 <h2>ボタン (高さサイズ)</h2>
-
+<p class="btn primary lower"><a href="">lower</a></p>
+<p class="btn primary low"><a href="">low</a></p>
+<p class="btn primary"><a href="">Default button</a></p>
+<p class="btn primary high"><a href="">high</a></p>
+<p class="btn primary lofty"><a href="">lofty</a></p>
 
 <h2>ボタン (Style)</h2>
 <a class="btn" href="">Default</a>
