--- a/docs/static/css/atomic-package.css
+++ b/docs/static/css/atomic-package.css
@@ -398,7 +398,7 @@ h6.title {
   width: 100%;
   min-height: 30px;
   padding: 0 12px;
-  background: #95A5A6;
+  background: #F9F9F9;
   border-radius: 4px;
   border: none;
   -webkit-box-sizing: border-box;
@@ -407,7 +407,7 @@ h6.title {
   box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   text-align: center;
   text-decoration: none;
-  color: #fff;
+  color: #6A6A6A;
   cursor: pointer;
   font-size: 14px;
   line-height: 28px;
@@ -562,6 +562,7 @@ h6.title {
 .btn:not(a).primary > button,
 .btn:not(a).primary > input {
   background: #2C3D50;
+  color: #fff;
 }
 
 .btn.blue > a,
@@ -571,6 +572,7 @@ h6.title {
 .btn:not(a).blue > button,
 .btn:not(a).blue > input {
   background: #3598DB;
+  color: #fff;
 }
 
 .btn.blue > a > a,
@@ -595,6 +597,7 @@ h6.title {
 .btn:not(a).green > button,
 .btn:not(a).green > input {
   background: #17BC9C;
+  color: #fff;
 }
 
 .btn.orange > a,
@@ -604,6 +607,7 @@ h6.title {
 .btn:not(a).orange > button,
 .btn:not(a).orange > input {
   background: #F39C12;
+  color: #fff;
 }
 
 .btn.red > a,
@@ -613,6 +617,7 @@ h6.title {
 .btn:not(a).red > button,
 .btn:not(a).red > input {
   background: #E74C3C;
+  color: #fff;
 }
 
 .btn.center,
@@ -642,7 +647,7 @@ input.btn {
   width: 100%;
   min-height: 30px;
   padding: 0 12px;
-  background: #95A5A6;
+  background: #F9F9F9;
   border-radius: 4px;
   border: none;
   -webkit-box-sizing: border-box;
@@ -651,7 +656,7 @@ input.btn {
   box-shadow: rgba(0, 0, 0, 0.13) 0 -2px 0 0 inset;
   text-align: center;
   text-decoration: none;
-  color: #fff;
+  color: #6A6A6A;
   cursor: pointer;
   font-size: 14px;
   line-height: 28px;
@@ -664,30 +669,35 @@ a.btn.primary,
 button.btn.primary,
 input.btn.primary {
   background: #2C3D50;
+  color: #fff;
 }
 
 a.btn.blue,
 button.btn.blue,
 input.btn.blue {
   background: #3598DB;
+  color: #fff;
 }
 
 a.btn.green,
 button.btn.green,
 input.btn.green {
   background: #17BC9C;
+  color: #fff;
 }
 
 a.btn.orange,
 button.btn.orange,
 input.btn.orange {
   background: #F39C12;
+  color: #fff;
 }
 
 a.btn.red,
 button.btn.red,
 input.btn.red {
   background: #E74C3C;
+  color: #fff;
 }
 
 .btnGroup > * {
